--- a/popup.html
+++ b/popup.html
@@ -16,14 +16,26 @@
       border-radius: 4px;
       cursor: pointer;
       font-size: 14px;
+      margin-bottom: 8px;
     }
     button:hover {
       background-color: #3367d6;
+    }
+    button:disabled {
+      background-color: #ccc;
+      cursor: not-allowed;
+    }
+    #status {
+      font-size: 12px;
+      color: #666;
+      text-align: center;
+      margin-top: 8px;
     }
   </style>
 </head>
 <body>
   <button id="archiveButton">Archive Current Page</button>
+  <div id="status"></div>
   <script src="popup.js"></script>
 </body>
 </html> 
