show version list and let user choose

--- a/popup.html
+++ b/popup.html
@@ -3,7 +3,7 @@
 <head>
   <style>
     body {
-      width: 200px;
+      width: 300px;
       padding: 10px;
       font-family: Arial, sans-serif;
     }
@@ -31,10 +31,30 @@
       text-align: center;
       margin-top: 8px;
     }
+    #versions {
+      margin: 10px 0;
+      max-height: 200px;
+      overflow-y: auto;
+    }
+    .version-item {
+      padding: 8px;
+      border: 1px solid #ddd;
+      margin-bottom: 4px;
+      border-radius: 4px;
+      cursor: pointer;
+    }
+    .version-item:hover {
+      background-color: #f5f5f5;
+    }
+    .version-item.selected {
+      background-color: #e8f0fe;
+      border-color: #4285f4;
+    }
   </style>
 </head>
 <body>
-  <button id="archiveButton">Archive Current Page</button>
+  <button id="archiveButton">Check Archives</button>
+  <div id="versions"></div>
   <div id="status"></div>
   <script src="popup.js"></script>
 </body>
