add legal notices and update documentation

--- a/popup.html
+++ b/popup.html
@@ -50,12 +50,25 @@
       background-color: #e8f0fe;
       border-color: #4285f4;
     }
+    .legal-notice {
+      margin-top: 15px;
+      padding: 10px;
+      font-size: 11px;
+      color: #666;
+      background-color: #f8f9fa;
+      border-radius: 4px;
+      border: 1px solid #e9ecef;
+      line-height: 1.4;
+    }
   </style>
 </head>
 <body>
   <button id="archiveButton">Check Archives</button>
   <div id="versions"></div>
   <div id="status"></div>
+  <div class="legal-notice">
+    <strong>Legal Notice:</strong> This extension was created for educational purposes only. Users should respect websites' Terms of Service and paid subscriptions. The use of archive services may be subject to their own terms of service and legal restrictions.
+  </div>
   <script src="popup.js"></script>
 </body>
 </html> 
